--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,26 @@ html {
   text-size-adjust: 100%;
 
   font-family: Overpass, sans-serif;
+  background-image: linear-gradient(#ff9500, #ff5e3a);
+  color: #fff;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.section .part {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.icon svg {
+  fill: currentColor;
+  width: 7rem;
 }
